<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_container_tab1">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_heart_rates"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>