...
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:contentDescription="@string/hr_monitor"
            android:src="@drawable/ic_heart_pulse_grey600_24dp"/>

        <Switch
            android:id="@+id/switch_heartrate_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_heart_rate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/primary_text"
...
