<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_signup"
    android:layout_centerVertical="true"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_signup_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/signup_for_cloud_app"
        android:textColor="@color/secondarytext"
        android:textSize="@dimen/primary_text" />

    <EditText
        android:id="@+id/et_email"
        android:layout_below="@id/tv_signup_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_default_bg"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="#bbbbbb"
        android:drawableStart="@android:drawable/sym_action_email"/>

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_email"
        android:background="@drawable/edittext_default_bg">

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:alpha="0.4"
            android:contentDescription="@string/username"
            android:padding="3dp"
            android:src="@drawable/icon_user" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/username_icon"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:textColorHint="#bbbbbb" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_username"
        android:background="@drawable/edittext_default_bg"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="#bbbbbb" />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pass"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:text="@string/signup"
        style="@style/DefaultButtonText"
        android:background="@drawable/button_default_bg"
        />

    <ImageView
        android:id="@+id/iv_uyw_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_signup"
        android:layout_centerInParent="true"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/hr_monitor"
        android:maxHeight="200dp"
        android:maxWidth="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/uyw" />

</RelativeLayout>